--- a/client/src/layouts/Base.astro
+++ b/client/src/layouts/Base.astro
@@ -17,10 +17,10 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
-		<slot />
+		<!-- navbar -->
+		 <div class="page-content">
+			<slot />
+		 </div>
+		<!-- footer -->
 	</body>
 </html>
-
-<style is:global>
-	
-</style>
