--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -3,7 +3,25 @@ import Base from '../layouts/Base.astro';
 ---
 
 <Base title="Portfolio">
-	
+	<section id="homepage">
+		<!-- hero / title -->
+		<main>
+			<!-- section -->
+      <article id="section-name-1" aria-labelledby="section-title-1">
+        <div class="container">
+          <h2 id="section-title-1">Section 1 Title</h2>
+          <p>Section 1 content</p>
+        </div>
+      </article>
+      <!-- section -->
+      <article id="section-name-2" aria-labelledby="section-title-2">
+        <div class="container">
+          <h2 id="section-title-2">Section 2 Title</h2>
+          <p>Section 2 content</p>
+        </div>
+      </article>
+		</main>
+	</section>
 </Base>
 
 <style>
