--- a/client/src/layouts/Base.astro
+++ b/client/src/layouts/Base.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Navbar from '../components/Navbar.astro';
+import Footer from '../components/Footer.astro';
 
 interface Props {
 	title: string;
@@ -25,6 +26,6 @@ const { title, description } = Astro.props;
 		 <div class="page-content">
 			<slot />
 		 </div>
-		<!-- footer -->
+		<Footer />
 	</body>
 </html>
