add: logo component

--- a/client/src/components/Footer.astro
+++ b/client/src/components/Footer.astro
@@ -1,6 +1,10 @@
+---
+import Logo from "./Logo.astro";
+---
+
 <footer>
   <div class="container">
-    Logo
+    <Logo />
     <p>&copy; 2024 | Name</p>
     <nav aria-label="Footer navigation">
       <ul>
