--- a/client/src/components/Navbar.astro
+++ b/client/src/components/Navbar.astro
@@ -1,10 +1,10 @@
 ---
-
+import Logo from "./Logo.astro";
 ---
 
 <div id="navbar">
   <div class="container">
-    Logo
+    <Logo />
     <nav aria-label="Main navigation">
       <ul>
         <!-- theme toggle -->
