--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Hero from '../components/page-sections/Hero.astro';
 import Section from '../components/titles/Section.astro';
 import Base from '../layouts/Base.astro';
 const title = "Home";
@@ -8,6 +9,7 @@ const description = "Description.";
 <Base title={title} description={description}>
 	<section id="homepage">
 		<!-- hero / title -->
+    <Hero />
 		<main>
 			<!-- section -->
       <article id="section-name-1" aria-labelledby="section-title-1">
