add: theme toggle

--- a/client/src/components/Navbar.astro
+++ b/client/src/components/Navbar.astro
@@ -1,5 +1,6 @@
 ---
 import Logo from "./Logo.astro";
+import ThemeToggle from "./ThemeToggle.astro";
 ---
 
 <div id="navbar">
@@ -7,7 +8,7 @@ import Logo from "./Logo.astro";
     <Logo />
     <nav aria-label="Main navigation">
       <ul>
-        <!-- theme toggle -->
+        <ThemeToggle />
         <li><a href="/blog">Blog</a></li>
         <li><a href="/blog/post1">Post 1</a></li>
       </ul>
