--- a/client/src/components/titles/Page.astro
+++ b/client/src/components/titles/Page.astro
@@ -14,8 +14,25 @@ const { title } = Astro.props;
 
 <style>
   header {
-    background-color: rgb(233, 233, 233);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: auto;
+    max-width: 1300px;
+    padding: 0 30px;
   }
+
+  header .container {
+    background-color: rgb(241, 241, 241);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    gap: 20px;
+  }
+  
   h1 {
 		font-size: 2em;
 	}
