add: index main components

--- a/client/src/components/page-sections/index/CTA.astro
+++ b/client/src/components/page-sections/index/CTA.astro
@@ -2,9 +2,9 @@
 import Section from "../../titles/Section.astro";
 ---
 
-<article id="intro">
+<article id="cta">
   <div class="container">
-    <Section title="Intro" />
-    <p>Intro content</p>
+    <Section title="CTA" />
+    <p>CTA content</p>
   </div>
 </article>
