--- a/client/src/components/page-sections/index/Features.astro
+++ b/client/src/components/page-sections/index/Features.astro
@@ -2,9 +2,9 @@
 import Section from "../../titles/Section.astro";
 ---
 
-<article id="intro">
+<article id="features">
   <div class="container">
-    <Section title="Intro" />
-    <p>Intro content</p>
+    <Section title="Features" />
+    <p>Features content</p>
   </div>
 </article>
