--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
+import CTA from '../components/page-sections/index/CTA.astro';
+import Features from '../components/page-sections/index/Features.astro';
 import Hero from '../components/page-sections/index/Hero.astro';
-import Section from '../components/titles/Section.astro';
+import Intro from '../components/page-sections/index/Intro.astro';
 import Base from '../layouts/Base.astro';
 const title = "Home";
 const description = "Description.";
@@ -11,20 +13,9 @@ const description = "Description.";
 		<!-- hero / title -->
     <Hero />
 		<main>
-			<!-- section -->
-      <article id="section-name-1" aria-labelledby="section-title-1">
-        <div class="container">
-          <Section id="section-title-1" title="Section 1" />
-          <p>Section 1 content</p>
-        </div>
-      </article>
-      <!-- section -->
-      <article id="section-name-2" aria-labelledby="section-title-2">
-        <div class="container">
-          <Section id="section-title-2" title="Section 2" />
-          <p>Section 2 content</p>
-        </div>
-      </article>
+      <Intro />
+      <Features />
+      <CTA />
 		</main>
 	</section>
 </Base>
