refactor: interactive components

--- a/client/src/components/Navbar.astro
+++ b/client/src/components/Navbar.astro
@@ -1,6 +1,6 @@
 ---
 import Logo from "./Logo.astro";
-import ThemeToggle from "./ThemeToggle.astro";
+import ThemeToggle from "./interactive/ThemeToggle.astro";
 ---
 
 <div id="navbar">
