--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -3,6 +3,7 @@ import CTA from '../components/page-sections/index/CTA.astro';
 import Features from '../components/page-sections/index/Features.astro';
 import Hero from '../components/page-sections/index/Hero.astro';
 import Intro from '../components/page-sections/index/Intro.astro';
+import Projects from '../components/page-sections/index/Projects.astro';
 import Base from '../layouts/Base.astro';
 const title = "Home";
 const description = "Description.";
@@ -14,6 +15,7 @@ const description = "Description.";
     <Hero />
 		<main>
       <Intro />
+			<Projects />
       <Features />
       <CTA />
 		</main>
