--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -10,7 +10,7 @@ const description = "Description.";
 ---
 
 <Base title={title} description={description}>
-	<section id="homepage">
+	<section id="home">
 		<!-- hero / title -->
     <Hero />
 		<main>
