--- a/client/src/components/page-sections/index/Intro.astro
+++ b/client/src/components/page-sections/index/Intro.astro
@@ -6,5 +6,7 @@ import Section from "../../titles/Section.astro";
   <div class="container">
     <Section title="Intro" />
     <p>Intro content</p>
+    JavaScript, TypeScript, Java, C++, Python, SQL, HTML, CSS
+    NextJS, React, Node, Express.js, Tailwind CSS, SCSS
   </div>
 </article>
