--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -33,6 +33,18 @@
 		padding: 30px;
 	}
 
+	/* hide on screen but show on screen readers */
+	.sr-only {
+		position: absolute;
+		width: 1px;
+		height: 1px;
+		padding: 0;
+		margin: -1px;
+		overflow: hidden;
+		clip: rect(0, 0, 0, 0);
+		border: 0;
+	}
+
 	a {
 		color: var(--links);
 	}
