add: insights component

--- a/client/src/pages/index.astro
+++ b/client/src/pages/index.astro
@@ -2,6 +2,7 @@
 import CTA from '../components/page-sections/index/CTA.astro';
 import Features from '../components/page-sections/index/Features.astro';
 import Hero from '../components/page-sections/index/Hero.astro';
+import Insights from '../components/page-sections/index/Insights.astro';
 import Intro from '../components/page-sections/index/Intro.astro';
 import Projects from '../components/page-sections/index/Projects.astro';
 import Base from '../layouts/Base.astro';
@@ -16,6 +17,7 @@ const description = "Description.";
 		<main>
       <Intro />
 			<Projects />
+			<Insights />
       <Features />
       <CTA />
 		</main>
