refactor: features title

--- a/client/src/components/page-sections/index/Features.astro
+++ b/client/src/components/page-sections/index/Features.astro
@@ -4,7 +4,7 @@ import Section from "../../titles/Section.astro";
 
 <article id="features">
   <div class="container">
-    <Section title="Features" style="sr-only"/>
+    <Section title="Let's work together"/>
     <div class="feature-card-container">
       <!-- feature -->
       <div class="feature-card">
