--- a/client/src/layouts/Base.astro
+++ b/client/src/layouts/Base.astro
@@ -3,6 +3,7 @@ import '../styles/global.css';
 import '../styles/theme.css';
 import Navbar from '../components/Navbar.astro';
 import Footer from '../components/Footer.astro';
+import Contact from '../components/Contact.astro';
 
 interface Props {
 	title: string;
@@ -27,6 +28,7 @@ const { title, description } = Astro.props;
 		 <div class="page-content">
 			<slot />
 		 </div>
+		 <Contact />
 		<Footer />
 	</body>
 </html>
